--- a/src/components/Header/Search.astro
+++ b/src/components/Header/Search.astro
@@ -117,7 +117,7 @@ import SearchIcon from "./SearchIcon.astro";
                 import.meta.env.BASE_URL.replace(/\/$/, "") + "/pagefind/",
               showImages: false,
               translations: {
-                placeholder: "搜索潮流内容",
+                placeholder: "搜索文章",
                 zero_results: "没有找到 [SEARCH_TERM]",
                 many_results: "[COUNT] 条搜索命中 [SEARCH_TERM]",
                 clear_search: "清除",
