--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -14,7 +14,8 @@ const { image, description, date } = post.frontmatter;
     data-placeholder-background='linear-gradient(to bottom, var(--placeholder-gradient-start), var(--placeholder-gradient-end))'
     data-src={`${image}?x-oss-process=image/resize,w_640/format,webp`}
     data-alt={title}
-    class='lozad block md:w-80 md:h-48 sm:w-96 w-full sm:h-52 h-56 rounded-t-md'
+    class='lozad block md:w-80 sm:w-96 w-full rounded-t-md'
+    style='height: 200px; object-fit: fill;'
   />
   <div
     class='w-full flex justify-between items-center leading-tight pt-4 sm:pl-3 sm:pr-3 pl-1 pr-1'
