--- a/src/components/HeadCommon.astro
+++ b/src/components/HeadCommon.astro
@@ -12,6 +12,9 @@ const { icon } = SITE;
 <link rel="icon" href={icon} />
 <link rel="sitemap" href="/sitemap.xml" />
 
+<!-- KaTeX CSS for math rendering -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.css" integrity="sha384-n8MVd4RsNIU0tAv4ct0nTaAbDJwPJzDEaqSD1odI+WdtXRGWt2kTvGFasHpSy3SV" crossorigin="anonymous">
+
 <link
   rel="stylesheet"
   href="https://gw.alipayobjects.com/os/k/font/lxgwwenkaiscreenr.css"
